kubernetes-102/ingressControllerNginxParte1/servicio2.yaml
apiVersion: v1
kind: Service
metadata:
  name: servicio2
spec:
  type: ClusterIP
  selector:
    app: nginx
    servicio: servicio2
  ports:
    - protocol: TCP
      port: 80
