kubernetes-102/ingressControllerNginxParte1/ingress1.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: ingress-service1
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
  - host: myservice1.videocursoscloud.co.uk
    http:
      paths:
      - path: /
        backend:
          serviceName: servicio1
          servicePort: 80
